# StempelWerk

./: .flake8  .gitattributes  .gitignore  CHANGELOG.md  LICENSE.md  README-herkules.md  README.md  StempelWerk.py  debug.ps1  debug.sh  process_templates.ps1  process_templates.sh  pyproject.toml  requirements.txt  settings.json.example  settings_example.json  stempelwerk.ps1  stempelwerk.sh  update_templates.ps1  update_templates.sh
10-templates/00-stencils/: 00-common_settings.sql.jinja  10-sql_create_table.sql.jinja  20-sql_create_stored_procedure.sql.jinja
10-templates/10-sql_server/: 10-table_only.sql.jinja  20-table_and_stored_procedure.sql.jinja  table_and_stored_procedure.sql.jinja
20-output/10-sql_server/: 10-MultiFile_Target.sql  10-SingleFile_Table.sql  20-MultiFile_Procedure.sql
script/: README.md  _poetry  bootstrap  bootstrap.ps1  build  build.ps1  coverage  coverage.ps1  lint  lint.ps1  setup  setup.ps1  test  test.ps1  uninstall  uninstall.ps1  update  update.ps1
src/: CustomCodeTemplate.py  StempelWerk.py
src/DirWalk/: DirWalk.py
src/DirWalk/unittest/: common.py  test_monster.py
src/custom/: add_filters.py  add_tests.py
src/herkules/: example_herkules.py
src/stempelwerk/: StempelWerk.py
src/stempelwerk/herkules/: LICENSE.md  README.md
src/stempelwerk/herkules/herkules/: Herkules.py
src/stempelwerk/herkules/script/: bootstrap  bootstrap.ps1  lint  test
src/stempelwerk/herkules/tests/: common.py  test_beetle.py
src/unittest/: common.py  test_manu.py  test_mascara.py  test_mona.py  test_nitram.py  test_sample.py  test_tintin.py
src/unittest/manu/1_template_6_multiple_stencils/10-templates/: abcd.txt.jinja
src/unittest/manu/1_template_7_create_subdirs/10-templates/subdir/: ab.jinja
src/unittest/mascara/2_exception_template_not_found/10-templates/: abcd.txt.jinja
src/unittest/tintin/0-custom/: add_filters.py
stempelwerk/: StempelWerk.py
stempelwerk/DirWalk/: DirWalk.py
stempelwerk/custom/: add_filters.py  add_tests.py
stempelwerk/dirwalk/: CHANGELOG.md  README.md  example.py  pyproject.toml
stempelwerk/dirwalk/script/: lint  lint.ps1  test  test.ps1
stempelwerk/dirwalk/tests/: test_monster.py
stempelwerk/herkules/: .gitignore  CHANGELOG.md  LICENSE.md  README.md  example.py  pyproject.toml
stempelwerk/herkules/herkules/: Herkules.py
stempelwerk/herkules/script/: bootstrap  lint  lint.ps1  setup.ps1  test  test.ps1  uninstall  update.ps1
stempelwerk/herkules/tests/: common.py  test_beetle.py  test_monster.py
templates/: StempelWerk.py
tests/: common.py  test_manu.py  test_mascara.py  test_monster.py  test_tintin.py
tests/herkules/: test_beetle.py
tests/manu/1_template_1_notrim/10-templates/: ab.jinja
tests/manu/1_template_3_splitfile/DRY/nested/10-templates/: abcd.included.jinja
tests/manu/1_template_4_file_separator/10-templates/: ab.jinja
tests/manu/1_template_6_multiple_stencils/10-templates/: abcd.txt.jinja
tests/manu/1_template_7_create_subdirs/10-templates/subdir/: ab.jinja
tests/manu/1_template_8_file_endings/10-templates/: abcd.jinja
tests/manu/2_templates_1_no_stencil/10-templates/: ab.jinja  cd.jinja
tests/manu/2_templates_2_with_stencil/10-templates/: ab.jinja
tests/mascara/1_process_only_modified_2/10-templates/: cd.jinja
tests/mascara/1_process_only_modified_2/10-templates/stencils/: common.jinja
tests/mascara/1_process_only_modified_2/10-templates_updated/: ab.jinja
tests/mascara/1_process_only_modified_3/10-templates_updated/stencils/: common.jinja
tests/mascara/2_exception_syntax_error/10-templates/: abcd.txt.jinja
tests/mascara/2_exception_syntax_error/10-templates/00-stencils/: common.jinja
tests/mascara/2_exception_template_not_found/10-templates/: abcd.txt.jinja
tests/mascara/2_exception_template_not_found/10-templates/00-stencils/: common.jinja
tests/tintin/1_global_variables/10-templates/: table_and_stored_procedure.sql.jinja
tests/tintin/1_global_variables/10-templates/stencils/: 00-common_settings.sql.jinja
tests/tintin/1_global_variables/20-data/: global.json
tests/tintin/2_custom_module/10-templates/: table_and_stored_procedure.sql.jinja
tests/tintin/2_custom_module/30-expected/: Procedure.sql  Table_Definition.sql
tests/tintin/3_jinja_extension/10-templates/: table_and_stored_procedure.sql.jinja
tests/tintin/custom/: add_filters.py  add_tests.py
