[project]
name = "StempelWerk"
version = "1.0.6"
description = "Automatic code generation from Jinja2 templates"
authors = [{ name = "Martin Zuther", email = "code@mzuther.de" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
dependencies = ["Jinja2>=3.1.6,<4"]

[dependency-groups]
dev = [
    "flake8>=6.0.0,<7",
    "flake8-cognitive-complexity>=0.1.0,<0.2",
    "flake8-fixme>=1.1.1,<2",
    "flake8-pytest-style>=1.7.2,<2",
    "pip-licenses>=5.0.0,<6",
    "pytest>=7.3.0,<8",
    "pytest-datafiles>=3.0.0,<4",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "current: marks tests as current (select with '-m current')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = [
    "tests",
]
