[project]
name = "StempelWerk"
dynamic = ["version"]
description = "Automatic code generation from Jinja2 templates"
keywords = ["template", "jinja", "code generation", "metaprogramming", "powerful", "lean"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
authors = [{ name = "Martin Zuther", email = "code@mzuther.de" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
dependencies = [
    "Jinja2>=3.1.6,<4",
    "herkules>=1.1.1,<2",
    "pytest-cov>=6.2.1",
]

[project.scripts]
stempelwerk= "stempelwerk.StempelWerk:main_cli"

[project.urls]
Homepage = "https://github.com/mzuther/StempelWerk"
Repository = "https://github.com/mzuther/StempelWerk.git"
Changelog = "https://github.com/mzuther/StempelWerk/blob/develop/CHANGELOG.md"

[dependency-groups]
dev = [
    "pip-licenses>=5.0.0",
    "pytest>=7.3.0,<8",
    "pytest-datafiles>=3.0.0,<4",
    "ruff>=0.12.11",
]

[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/stempelwerk/StempelWerk.py"

[tool.pytest.ini_options]
markers = [
    "current: marks tests as current (select with '-m current')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    # pycodestyle (errors)
    "E",
    # pycodestyle (warnings)
    "W",
    # Pyflakes
    "F",

    # flake8-bugbear
    "B",
    # mccabe
    "C90",
    # flake8-fixme
    "FIX",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
]

[tool.ruff.lint.mccabe]
max-complexity = 7
