[tool.poetry]
name = "Herkules"
version = "1.0.0"
description = "Crawl directories with style"
authors = ["Martin Zuther <code@mzuther.de>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-fixme = "^1.1.1"
flake8-pytest-style = "^1.7.2"
pip-licenses = "^5.0.0"
pytest = "^7.3.0"
pytest-datafiles = "^3.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "current: marks tests as current (select with '-m current')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
